code style for package managers

--- a/AZ-300 Microsoft Azure Architect Technologies/0. Azure basics.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/0. Azure basics.md
@@ -2,7 +2,7 @@
 
 * Azure is based on REST API's
   * You can use Portal, PowerShell, Azure CLI that wrap REST API's.
-  * **Azure Cloud Shell**: Browser-accessible shell on portal that can run PowerShell, Azure CLI and even more like git/bash/pip/maven etc.
+  * **Azure Cloud Shell**: Browser-accessible shell on portal that can run PowerShell, Azure CLI and even more like `git`/`bash`/`pip`/`maven` etc.
   * 💡 Azure CLI can often handle everything that other wrappers can and even more.
 * **SLA** is a guarantee that Azure gives to customers for different offerings.
   * Guarantees Monthly Uptime Percentage
