--- a/AZ-300 Microsoft Azure Architect Technologies/6. Understanding Cloud Architect Technology Solutions.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/6. Understanding Cloud Architect Technology Solutions.md
@@ -1,4 +1,4 @@
-# Understanding Cloud Architect Technology Solutions (5-10%)
+# 6. Understanding Cloud Architect Technology Solutions
 
 ## Design and Connectivity Patterns
 
