--- a/AZ-301 Microsoft Azure Architect Design/2. Designing a Data Platform Solution.md
+++ b/AZ-301 Microsoft Azure Architect Design/2. Designing a Data Platform Solution.md
@@ -330,7 +330,7 @@
   - Simple management
     - In portal: Azure Management Portal -> Manage
     - REST API, PowerShell or Xplat CLI
-  - Database Tiers
+  - **Database Tiers**
     - Three tier where every tier have different performance levels:
       - Basic/Standard model
         - Based on remote storage.
@@ -342,7 +342,7 @@
       - ***Basic*** *(5 DTU)* is ideal for *small dbs*, *single active operation*, *dev/test*, *small scale apps*
       - ***Standard*** *(10 - 100 DTU)* is ideal for *multiple operations*, *workgroup or web apps*
       - ***Premium*** *(100 - 800 DTU)* is ideal for *high transaction volumes*, *large number of users*, *multiple operations*, *mission critical apps*.
-  - Elastic scale
+  - **Elastic scale**
     - Scaling it/out by simplified sharding.
       - Coordinates data movement between shards to split or merge ranges of data among different databases
     - Satisfies common scenarios such as pulling a busy tenant into its own shardING
@@ -355,7 +355,7 @@
           - Perform queries across multiple shards
           - Modify service tier for existing shards
         - The Elastic Scale features in Azure SQL Database that implements the any changes requested by your application.
-    -Third-party managed SQL databases in Azure
+    - Third-party managed SQL databases in Azure
       1. ***Azure Database for MySQL***
           - MYSQL community with tools preinstalled like mysql.exe and phpMyAdmin.
       2. ***Azure Database for PostgreSQL***
@@ -370,7 +370,7 @@
       - Other options
         - Own VM's running e.g. MySQL
         - ClearDB provides managed MySQL that you can create from Azure Marketplace.
-  - SQL Availability
+  - **SQL Availability**
     - **Azure Site Recovery**: Only for VM’s
     - **AlwaysOn**
       - Available only in SQL servers
@@ -450,7 +450,7 @@
     - **Azure SQL Database automatic backups**: 7-35 days
 
 - NoSQL services
-  - Azure Storage
+  - **Azure Storage**
     - Massively scalable to support big data scenarios & small amount of data.
     - Billing is calculated by usage, not capacity.
     - Auto-partitioning with automatically load-balancing based on traffic.
@@ -484,7 +484,7 @@
         - Rate limit
           - ❗ A partition has a scalability target of 500 entities per second.
             - The throughput may be higher during minimal load on the storage node, but it will be throttled down when the node becomes hot or very active.
-        - `PartitionKey` &``RowKey` properties
+        - `PartitionKey` & `RowKey` properties
           - Can store up to 1 KB of string values.
           - Empty strings are also permitted; however, `null` values are not.
           - ***Clustered index sorting***: Ascending PartitionKey then by ascending RowKey.
