--- a/AZ-301 Microsoft Azure Architect Design/3. Designing for Deployment, Migration and Integration.md
+++ b/AZ-301 Microsoft Azure Architect Design/3. Designing for Deployment, Migration and Integration.md
@@ -123,20 +123,20 @@
   - There are many pre-defined policy definitions built into Azure.
 
 - **Policy vs. RBAC**
-- RBAC controls user access, permissions, privileges, and actions at different scopes.
-- Policy evaluates resource properties for already existing resources and during deployment
-  - E.g. control which type of resource is available for deployment in your organization
-  - E.g. limit the locations in which you deploy resources or require your resources to follow naming conventions
+  - RBAC controls user access, permissions, privileges, and actions at different scopes.
+  - Policy evaluates resource properties for already existing resources and during deployment
+    - E.g. control which type of resource is available for deployment in your organization
+    - E.g. limit the locations in which you deploy resources or require your resources to follow naming conventions
 - **Azure policy** is a default allow, and explicit deny system as opposed to RBAC.
-- Create policies
-  - The contributor role does not contain the necessary permissions.
+- ***Create policies***
+  - The `contributor` role does not contain the necessary permissions.
   - You need:
     - **Microsoft.Authorization/policydefinitions/** write permission to define a policy.
     - **Microsoft.Authorization/policyassignments/** write permission to assign a policy.
 
 - **Built-in Policies**
-- E.g. allowed locations, allowed resource types, allowed storage account SKUs, allowed virtual machine SKUs, apply tag and default value, enforce tag and value, not allowed resource types, require SQL Server version 12.0, require storage account encryption.
-  - Inclusion is to limit the number a user is required to create to manage their subscription efficiently.
+  - E.g. allowed locations, allowed resource types, allowed storage account SKUs, allowed virtual machine SKUs, apply tag and default value, enforce tag and value, not allowed resource types, require SQL Server version 12.0, require storage account encryption.
+    - Inclusion is to limit the number a user is required to create to manage their subscription efficiently.
 
 - **Policy Definition**
   - Every policy definition contains a minimum of two elements:
@@ -239,9 +239,9 @@
       2. JSON object for virtual machines that are deployed into the virtual network.
       3. JSON object for a network security group to secure the virtual network.
       4. JSON object for a load balancer to distribute incoming requests to the virtual machines
-    - Problem:
-      - Great deal of knowledge about Azure Resource Manager and the resources themselves.
-      - Difficulty maintaining your templates because any modification can lead to unforeseen issues.
+  - Problem:
+    - Great deal of knowledge about Azure Resource Manager and the resources themselves.
+    - Difficulty maintaining your templates because any modification can lead to unforeseen issues.
 
 - **Azure Building Blocks**
   - Command line tool and set of ARM templates.
@@ -438,15 +438,15 @@
   - Includes end-of-cycle processing such as a bank's daily risk reporting or a payroll that must be done on schedule.
   - Includes large-scale business, science, and engineering applications that typically need the tools and resources of a compute cluster or grid.
   - Batch works well with intrinsically parallel (sometimes called "embarrassingly parallel") applications or workloads, which lend themselves to running as parallel tasks on multiple computers.
-  - Concepts:
-    - Pool
+  - ***Concepts***:
+    - **Pool**
       - Number and size of machine
       - E.g. 100 machines, n1 series.
-    - Job
+    - **Job**
       - Includes one or more code packages.
-    - Task
+    - **Task**
       - Task to execute code package.
-    - Execution:
+    - **Execution**:
       1. Starts all VM's (takes time)
       2. Executes code
       3. Removes all VM's
@@ -458,14 +458,14 @@
       - The Batch Apps framework handles the movement of input and output files, the splitting of jobs into tasks, job and task processing, and data persistence.
 
 - ***Stateless component workloads***
-- You do not have to rely on the pre-defined HPC services.
-- Azure provides non-managed solutions and related services to provide a degree of HPC using IaaS.
-  - These include: • Virtual Machines • VM scale Sets • Azure Container Services • HDInsight • Machine Learning and more.
-  - Azure fabric is a good platform to deploy parallel compute tasks on several services.
-- 💡 Best practices:
-  - Azure Resource manager to automate deployment.
-  - Auto scale based on various criteria.
-    - E.g.  deploying a scale set manage an HPC workload by varying the number of VMs based on the queue length would combine auto-scale based on a custom metric with HPC Pack and templated infrastructure deployment.
+  - You do not have to rely on the pre-defined HPC services.
+  - Azure provides non-managed solutions and related services to provide a degree of HPC using IaaS.
+    - These include: • Virtual Machines • VM scale Sets • Azure Container Services • HDInsight • Machine Learning and more.
+    - Azure fabric is a good platform to deploy parallel compute tasks on several services.
+  - 💡 Best practices:
+    - Azure Resource manager to automate deployment.
+    - Auto scale based on various criteria.
+      - E.g.  deploying a scale set manage an HPC workload by varying the number of VMs based on the queue length would combine auto-scale based on a custom metric with HPC Pack and templated infrastructure deployment.
 
 ## Migration
 
