--- a/AZ-301 Microsoft Azure Architect Design/4. Designing an Infrastructure Strategy.md
+++ b/AZ-301 Microsoft Azure Architect Design/4. Designing an Infrastructure Strategy.md
@@ -578,7 +578,7 @@
       - ***Router***: You can use filters to route specific events to different or even multiple endpoints.
         - You can route to a WebHook endpoint or event handler.
 
-- Integration
+- ***Integration***
   - **Serverless Integration**
     - Serverless applications: Azure Logic Apps, Azure Functions.
     - Development: IDE support, visual debug history, local development, verbose debugging.
