--- a/AZ-300 Microsoft Azure Architect Technologies/0. Azure basics.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/0. Azure basics.md
@@ -41,6 +41,6 @@
             * Maintained by Microsoft + Community (on github)
             * Provides "Deploy to Azure" button
       * You can control how things are deployed using **Azure Policy** on resource group, subscription, or management group level.
-* Egress charges
-  * Moving data to Azure is free.
+* ***Egress charges***
+  * Moving data to Azure mostly is free.
   * From Azure to outside (without ExpressRoute or  Content Delivery Network) you get extra egress charges.
