removed numbering from headers

--- a/AZ-300 Microsoft Azure Architect Technologies/4. Implement Authentication and Secure Data.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/4. Implement Authentication and Secure Data.md
@@ -1,4 +1,4 @@
-# 4. Implementing Authentication and Secure Data
+# Implementing Authentication and Secure Data
 
 - Authentication
   - Act of verifying someone's identity.
