--- a/AZ-301 Microsoft Azure Architect Design/2. Designing a Data Platform Solution.md
+++ b/AZ-301 Microsoft Azure Architect Design/2. Designing a Data Platform Solution.md
@@ -1,4 +1,4 @@
-# 2. Designing a Data Platform Solution
+# Designing a Data Platform Solution
 
 - **Azure Storage**
   - All services can be used using a REST API
