--- a/AZ-301 Microsoft Azure Architect Design/3. Designing for Deployment, Migration and Integration.md
+++ b/AZ-301 Microsoft Azure Architect Design/3. Designing for Deployment, Migration and Integration.md
@@ -1,4 +1,4 @@
-# 3. Designing for Deployment, Migration and Integration
+# Designing for Deployment, Migration and Integration
 
 ## Azure Resource Manager
 
