--- a/AZ-301 Microsoft Azure Architect Design/4. Designing an Infrastructure Strategy.md
+++ b/AZ-301 Microsoft Azure Architect Design/4. Designing an Infrastructure Strategy.md
@@ -1,4 +1,4 @@
-# 4. Designing an Infrastructure Strategy
+# Designing an Infrastructure Strategy
 
 ## Application Architecture Patterns in Azure
 
