--- a/AZ-100 Microsoft Azure Infrastructure and Deployment/1. Manage Azure subscriptions and resources.md
+++ b/AZ-100 Microsoft Azure Infrastructure and Deployment/1. Manage Azure subscriptions and resources.md
@@ -52,7 +52,7 @@
     3. **Details**: Who, when, where, how
     4. **Action Group**: Who to inform and how to inform them
         - **Action Type**: Email/SMS/Push/Voice, Azure Funtion, LogicApp, Webhook, ITSM, Automation Runbook
-  - ***Metrics**
+  - **Metrics**
     1. **Resource group**: Where to look at the metric
     2. **Resource type**: The type of resource to look at
     3. **Available metrics**: What specifics about the metrics
