--- a/AZ-100 Microsoft Azure Infrastructure and Deployment/2. Implement and manage storage.md
+++ b/AZ-100 Microsoft Azure Infrastructure and Deployment/2. Implement and manage storage.md
@@ -82,7 +82,7 @@
         - Azure CDN servers become ***edge servers***
         - CDN can authenticate to Blob Storage with SAS tokens to be able to read private data.
         - ***Caching rules***: On blobs you can set CDN caching rules, such as `CacheControl:max-age=86400` in blob properties.
-        - ***Set up**: Two alternatives
+        - ***Set up***: Two alternatives
           - Create CDN and configure against blob service.
           - Storage account -> Blob service -> CDN
 
