--- a/AZ-100 Microsoft Azure Infrastructure and Deployment/3. Deploy and manage virtual machines (VMs).md
+++ b/AZ-100 Microsoft Azure Infrastructure and Deployment/3. Deploy and manage virtual machines (VMs).md
@@ -614,7 +614,7 @@
             - Configuration
             - Restore to original or alternate location
             - Quick create option
-            - ***Flow**: Recovery Services Vault -> Restore VM -> Restore type: Create VM
+            - ***Flow***: Recovery Services Vault -> Restore VM -> Restore type: Create VM
           - **Individual Disks**
             - Restore to storage account
             - Includes ARM deployment template
