whitespace & newline fixes

--- a/AZ-300 Microsoft Azure Architect Technologies/5. Developing for the Cloud.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/5. Developing for the Cloud.md
@@ -240,7 +240,7 @@
       - You can run Azure services (Azure Functions, Azure Stream Analytics, Azure Machine Learning, ..), or your own code on-prem on devices with remote cloud monitoring & management
 - **Create & configure a Service Bus**
   - Service Bus extends Storage Queues.
-  - Communication mechanisms: 
+  - Communication mechanisms:
     - **Queues** (simple queues)
       - Each queue acts as broker (intermediary) that stores messages until sent.
       - One directional broker: Message is sent to single recipients.
@@ -314,7 +314,7 @@
         ```c#
         public static void Run(string message, System.TraceWriter log)
         {
-          log.Info($"New message: {message}"); 
+          log.Info($"New message: {message}");
         }
         ```
 
@@ -424,9 +424,8 @@
         return response from starter
       ```
 
-## Implement code that addresses a transient state
+## Implement code that addresses singleton application instances
 
-- Implement code that addresses singleton application instances
 - An application that communicates with elements running in the cloud has to be sensitive to the transient faults that can occur in this environment.
   - Faults e.g. momentary loss of network connectivity to components and services, the temporary unavailability of a service, or timeouts that occur when a service is busy.
 - These faults are self-correcting and if action is done after delay, it's likely to be successful.
@@ -517,13 +516,13 @@
     - **Cassandra API**: You can switch from using Apache Cassandra to using Azure Cosmos DB 's Cassandra API, by just changing a connection string.
     - **Table API**: Azure Table storage can migrate to Azure Cosmos DB by using the Table API with no code changes and take advantage of premium capabilities.
   - **Implement partitioning schemes**
-    - Cosmos DB uses hash-based partitioning to spread logical partitions across physical partitions. The partition key value of an item is hashed by Cosmos DB, and the hashed result determines the physical partition. 
+    - Cosmos DB uses hash-based partitioning to spread logical partitions across physical partitions. The partition key value of an item is hashed by Cosmos DB, and the hashed result determines the physical partition.
     - ❗ Limitations
       - A single logical partition is allowed an upper limit of 10 GB of storage.
-      - Partitioned containers are configured with minimum throughput of 400 RU/s. Requests to the same partition key can't exceed the throughput allocated to a partition. 
+      - Partitioned containers are configured with minimum throughput of 400 RU/s. Requests to the same partition key can't exceed the throughput allocated to a partition.
         - It's important to pick a partition key that doesn't result in "hot spots" within your application.
     - Syntatic partition keys
-      - It's a best practice to have a partition key with many distinct values, such as hundreds or thousands. 
+      - It's a best practice to have a partition key with many distinct values, such as hundreds or thousands.
       - Concatenate multiple properties of an item
         - E.g.
 
@@ -538,7 +537,7 @@
       - Use a partition key with a random suffix
         - Distribute the workload more evenly is to append a random number at the end of the partition key value.
         - You can perform parallel write operations across partitions.
-        - E.g. you might choose a random number between 1 and 400 and concatenate it as a suffix to the date. 
+        - E.g. you might choose a random number between 1 and 400 and concatenate it as a suffix to the date.
           - like 2018-08-09.1, 2018-08-09.2, and so on, through 2018-08-09.400
           - This method results in better parallelism and overall higher throughput
         - The randomizing strategy can greatly improve write throughput, but it's difficult to read a specific item
@@ -548,7 +547,7 @@
         - The writes are evenly spread across the partition key values, and across the partitions.
         - You can easily read a particular item and date because you can calculate the partition key value for a specific ID.
         - The benefit of this method is that you can avoid creating a single hot partition key.
-          - **A hot partition key** is the partition key that takes all the workload. 
+          - **A hot partition key** is the partition key that takes all the workload.
     - You can provision throughput for a CosmosDb database or container during creation e.g. `OfferThroughput = 100000`
   - **Set the appropriate consistency level for operations**
     - Make the fundamental tradeoff between the read consistency vs. availability, latency, and throughput.
@@ -557,14 +556,14 @@
       - Easy to program applicatoins
     - Eventual consistency
       - Higher availability and better performance
-      - Hard to program applications. 
+      - Hard to program applications.
     - Consistensy levels in Cosmos Db (from strongest to weakest)
       - **Strong**, **Bounded staleness**, **Session**, **Consistent prefix**, **Eventual**
         - **Strong**: Always guaranteed to read the latest committed write.
         - **Bounded staleness**
           - Staleness can be configured in two ways:
             - The number of versions (K) of the item
-            - The time interval (t) by which the reads might lag behind the writes 
+            - The time interval (t) by which the reads might lag behind the writes
             - 💡 Recommended for high consistency
         - **Session**
           - Scoped to client session.
@@ -593,7 +592,7 @@
     - Create managed instance
       - Azure SQL Database Managed Instance is a fully managed SQL Server Database Engine Instance hosted in Azure cloud. This is the best PaaS option for migrating your SQL Server database to the cloud.
         - The managed instance deployment option provides high compatibility with on-premises SQL Server Database Engine.
-        - Cross-database query support is one of the main reasons to use managed instance over Azure SQL Database. 
+        - Cross-database query support is one of the main reasons to use managed instance over Azure SQL Database.
           - ❗ Elastic Transactions / The Microsoft Distributed Transaction Coordinator is not supported.
       - **Flow**: Create a resource  -> Managed Isntance -> Azure SQL Managed Instance
         - Set e.g. collation, VNet
@@ -614,7 +613,7 @@
   - **Configure elastic pools for Azure SQL Database**
     - SQL Database elastic pools
       - Simple, cost-effective solution for managing and scaling multiple databases that have varying and unpredictable usage demands.
-      - The databases  are on a single Azure SQL Database server 
+      - The databases  are on a single Azure SQL Database server.
       - Share a set number of resources at a set price
     - Problem & solution
       - **Problem**:
@@ -679,7 +678,7 @@
           ```
 
         - **Sharded database applications**
-          - Use `OpenConnectionForKey` method of the elastic database client library to open connections for a scaled out data tier. 
+          - Use `OpenConnectionForKey` method of the elastic database client library to open connections for a scaled out data tier.
           - C#:
 
             ```c#
@@ -710,7 +709,7 @@
         - E.g. `sys.dm_tran_active_transactions`, `sys.dm_tran_database_transactions`, `sys.dm_tran_locks`.
   - **Create, read, update, and delete data tables by using code** (C# ADO .NET)
     - First ensure you can reach the database: Database -> Set server firewall -> Add client IP
-    - You create/delete table, populate table or update/delete and select da ta with TSQL 
+    - You create/delete table, populate table or update/delete and select da ta with TSQL
     - Example:
 
       ```c#
