changed all <sup><sub> combinations to intended <sup> only

--- a/AZ-300 Microsoft Azure Architect Technologies/1. Developing and Configuring Infrastructure.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/1. Developing and Configuring Infrastructure.md
@@ -20,7 +20,7 @@
     * External services billed separately
   * Get notifications through Azure advisor or using third party services like Cloudyn for anomalies and overspending risks.
 
-### Azure Monitor <sup><sub>PaaS</sup></sub>
+### Azure Monitor <sup>PaaS</sup>
 
 * Pipeline for metric log data coming from any Azure resource provider.
 * Fastest telemetry pipeline: Faster than Log Analytics.
@@ -110,7 +110,7 @@
 * You can download, filter, postpone, dismiss recommendations.
 * You can customize by excluding subscription/resource groups, configuring utilization rules (e.g. you can as a subscription owner set CPU to lower threshold)
 
-### Log Analytics  <sup><sub>PaaS</sup></sub>
+### Log Analytics  <sup>PaaS</sup>
 
 * Log Analytics is renamed to “Logs” and “Log Search”
 * You collect, correlate, search, and act on log and performance with data with any schema.
@@ -148,7 +148,7 @@
 
 ## Storage accounts
 
-### Azure Storage <sup><sub>PaaS</sup></sub>
+### Azure Storage <sup>PaaS</sup>
 
 * Azure storage is PaaS to store files, messages, tables, and other types of information.
   * Subservices: Blob, File, Queue *(more basic than ServiceBus without overhead, 💡 good for >80GB)*, and Table.
@@ -328,11 +328,11 @@
 * Allow ping: `New-NetFirewallRule –DisplayName "Allow ICMPv4-In" –Protocol ICMPv4`
 * Install IIS (Webserver): `Install-WindowsFeature -name Web-Server -IncludeManagementTools`
 
-### Virtual Machines <sup><sub>IaaS</sup></sub>
+### Virtual Machines <sup>IaaS</sup>
 
 * **Grouping of VM's**: Availability sets and scale sets.
   * ❗ Defined during creation of VM’s, cannot be applied to existing VM's.
-  * **Availability set** <sup><sub>IaaS</sup></sub>
+  * **Availability set** <sup>IaaS</sup>
     * Holds different tiers (instances) so Azure split them onto different places on hardware.
     * Pay only for VM’s
     * Two logical grouping:
@@ -340,7 +340,7 @@
         * ❗ Max 3
       * **Update domains**: Grouping when maintaining (reboot etc) at a time.
         * ❗ Default = 5, Max: 20
-  * **Scale set** <sup><sub>IaaS</sup></sub>
+  * **Scale set** <sup>IaaS</sup>
     * A scale set is an implicit availability set with five fault domains and five update domains.
     * Holds identical instances of images in the scale set so they can be scaled
     * You deploy it via ARM template
@@ -534,7 +534,7 @@
           * For on-premises, you need to install VM agent
     * Restoring VM's
       1. You can choose to restore only files.
-          * Restore types: <sub><sup>[Three Ways to Restore Azure IaaS VMs](https://newsignature.com/articles/three-ways-restore-azure-iaas-vms/)</sub></sup>
+          * Restore types: <sup>[Three Ways to Restore Azure IaaS VMs](https://newsignature.com/articles/three-ways-restore-azure-iaas-vms/)</sup>
             * ***Create a virtual machine***:
               * Basic settings such as VNet,subnet and storage account.
               * ❗ Does not support advanced settings such as e.g. VMs under load balancer, multiple reserved IPs or multiple NICs.
@@ -574,7 +574,7 @@
       * ❗ Capacity: Max 5 TiB file shares.
       * You want to store data that's not required to be access from outside the VM to which the disk is attached.
 
-### Virtual Networks <sup><sub>IaaS</sup></sub>
+### Virtual Networks <sup>IaaS</sup>
 
 * Virtual networks are software defined logical isolation that mimics the hardware.
 * Virtual networks are defined with address space and at least 1 subnet.
@@ -796,7 +796,7 @@
             * Point-to-site VPN <=> Connect client
         * _Use remote gateways_: Uses peer's virtual gateway.
 
-## Azure Active Directory <sup><sub>PaaS</sup></sub>
+## Azure Active Directory <sup>PaaS</sup>
 
 ### Active Directory Domain Services (ADDS)
 
@@ -827,7 +827,7 @@
   * You can deploy AD DS to Azure as VM but:
     * You manage the deployment, configuration, virtual machines, patching, and other backend tasks.
 
-### Azure Active Directory <sup><sub>PaaS</sup></sub>
+### Azure Active Directory <sup>PaaS</sup>
 
 * Different than Active Directory, it's flat: no domains, objects, forests etc.
 * ***Identity management solution***: multi-factor authentication, device registration, self-service password management, self-service group management, privileged account management, RBAC, application usage monitoring, auditing & security monitoring & alerting.
