--- a/AZ-300 Microsoft Azure Architect Technologies/2. Implementing Workloads and Security.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/2. Implementing Workloads and Security.md
@@ -65,7 +65,7 @@
     - **Comfort factor**: Buffer that's applied on top of machine utilization data for VMs.
 - ❗ Assesses only VMWare (>5.5) environments, for Hyper-V machines use *Azure Site Recovery Deployment Planner*.
 
-### Azure Site Recovery Service <sub><sup>DRaaS: Disaster Recovery as a Service</sub></sup>
+### Azure Site Recovery Service <sup>DRaaS: Disaster Recovery as a Service</sup>
 
 - Tool for VM replication and migration from anywhere to Azure
 - Lifting and shifting of servers, apps, databases, and data.
@@ -179,7 +179,7 @@
   - Max disk size: 4TB
   - Max OS size: 2TB but for generation 2 hyper-v it's 200GB
 
-## Web Apps <sup><sub>PaaS</sup></sub>
+## Web Apps <sup>PaaS</sup>
 
 - PaaS for web applications.
 - App Service Plan is the infrastructure app services run on.
@@ -314,7 +314,7 @@
 - Applications in Azure:
   - _(Compute)_ Azure Functions, _(Storage)_ Azure Storage, _(Database)_ Azure Cosmos Db, _(Security and access control)_ Azure Active Directory, _(Cloud messaging)_ Event Grid, Service Bus, _(Workflow orchestration)_ Logic Apps, _(API Management)_ Azure API Management, Azure Function Proxies: single API surface that calls different functions, _(Analytics)_ Azure Stream Analytics, Event Hubs, _(Intelligence)_ Azure Bot Service, Cognitive Services
 
-### Azure Functions <sub><sup>FaaS: Functions as a Service</sub></sup>
+### Azure Functions <sup>FaaS: Functions as a Service</sup>
 
 - Built on top of WebJobs SDK.
 - No idle capacity charges.
@@ -357,7 +357,7 @@
     - Receive messages in batch whenever possible
     - Configure host behavior to better handle concurrency (max outstanding requests, max concurrent requests etc).
 
-### Event Grid <sub><sup>iPaaS: Integration Platform as a Service</sub></sup>
+### Event Grid <sup>iPaaS: Integration Platform as a Service</sup>
 
 - Fully managed, http-based event routing service for events.
 - It connects and integrates all Azure services.
@@ -384,7 +384,7 @@
   - Pay by number of operations
   - `Published events, + delivery attempts, - monthly free grant (100k) = total operations x $0.60`
 
-### Service Bus<sup><sub>PaaS</sup></sub>
+### Service Bus<sup>PaaS</sup>
 
 - Managed messaging infrastructure across private & public cloud.
 - Publish/Subscribe
@@ -581,7 +581,7 @@
     - Not mutable, requires re-deploy.
 - There are quick start ARM templates. e.g.: 2 VM's internal load balancer.
 
-### Azure Application Gateway <sub><sup>Application Delivery Controller (ADC) as a service</sup></sub>
+### Azure Application Gateway <sup>Application Delivery Controller (ADC) as a service</sup>
 
 - Web traffic load balancer at _Layer 7 – Application_ as opposed to Load Balancer that operates at _Layer 4 – TCP and UDP_
 - Application gateway can be configured as
