--- a/AZ-300 Microsoft Azure Architect Technologies/3. Create and Deploy Apps.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/3. Create and Deploy Apps.md
@@ -82,7 +82,7 @@
     * You can set attributes on view models such as `[Required]` or `[DefaultValue(false)]`
     * On controller you can use `[Produces("application/json")]`
     * On actions you can use `[ProducesResponseType(201)]` and then document with `<response code="201"/>` XML tag.
-* Azure Logic App <sup><sub>IPaaS: Integration Platform as a Service</sup></sub>
+* Azure Logic App <sup>IPaaS: Integration Platform as a Service</sup>
   * Automate tasks & integrates apps, data, systems and services across enterprises or organizations by automating tasks and business processes as workflows.
   * Some workload examples:
     * Move uploaded file from an SFTP or FTP server to Azure Storage.
