--- a/AZ-300 Microsoft Azure Architect Technologies/4. Implement Authentication and Secure Data.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/4. Implement Authentication and Secure Data.md
@@ -21,7 +21,7 @@
       - Restrict access to Azure web app.
     - You can use over SSL/TLS
     - You can set API Management to use client certifications.
-- **Azure Active Directory** <sup><sub>IDaaS: Identity as a Service</sup></sub>
+- **Azure Active Directory** <sup>IDaaS: Identity as a Service</sup>
   - Identity & access management on Azure with directory services, identity governance and application access management (access control).
   - Quickly enables SSO to commercial apps in marketplace and custom apps.
   - You communicate through Azure AD Graph API or Microsoft Graph.
@@ -168,7 +168,7 @@
         - ❗ Limitations:
           - APIs have no access to users in Azure AD, you provide them.
           - No enrollment & user management features.
-- Implement OAuth2 <sup><sub>[tutorial](https://docs.microsoft.com/en-us/azure/api-management/set-edit-policies)</sup></sub>
+- Implement OAuth2 <sup>[tutorial](https://docs.microsoft.com/en-us/azure/api-management/set-edit-policies)</sup>
   - In Azure AD
     - App registrations -> Register server + client apps with URLs.
       - For client: Settings -> Keys -> Passwords -> Create key with expiration date.
