--- a/AZ-300 Microsoft Azure Architect Technologies/5. Developing for the Cloud.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/5. Developing for the Cloud.md
@@ -17,7 +17,7 @@
     - molecular modeling and computational fluid dynamics
   - In Azure:
     - H-seris VM's
-  - **Azure Batch for HPC** <sub><sup>PaaS</sub></sup>
+  - **Azure Batch for HPC** <sup>PaaS</sup>
     - Manages VM's, computes nodes with job scheduling (uses internal queue), autoscale, data persistence.
     - Batch API lets you wrap existing (on-prem or cloud) compute node so it runs as a service on computer node pool that Batch manages.
     - Good for intrinsically parallel (sometimes called *embarrassingly parallel* or *perfectly parallel*) workloads
@@ -283,7 +283,7 @@
   - Useful for "gluing" together disparate systems (e.g. integration solutions)
   - They can all define input, actions, conditions, and output.
   - You can run each of them on a schedule or via a trigger.
-  - Azure Functions <sub><sup>FaaS: Functions as a Service</sub></sup>
+  - Azure Functions <sup>FaaS: Functions as a Service</sup>
     - Support many languages such as C#, F#, Node.js, Java or PHP.
     - Excellent for: data processing, integrating systems working with IoT, simple APIs/micro-services.
     - Integrates with Azure and 3rd party services
