--- a/AZ-301 Microsoft Azure Architect Design/1. Designing for Identity and Security.md
+++ b/AZ-301 Microsoft Azure Architect Design/1. Designing for Identity and Security.md
@@ -50,7 +50,7 @@
           - Monitor key usage.
         - This administrator would then provide developers with URIs to call from their applications, and provide their security administrator with key usage logging information.
 
-### Azure Active Directory (Azure AD) <sup><sub>PaaS</sup></sub>
+### Azure Active Directory (Azure AD) <sup>PaaS</sup>
 
 - Microsoft's multi-tenant, cloud-based directory and identity management service.
 - Combines core directory services, advanced identity governance, and application access management.
@@ -248,7 +248,7 @@
         - Optionally, face detection extracts a series of face related attributes such as pose, gender, age, head pose, facial hair and glasses.
         - Face recognition is widely used in many scenarios including security, natural user interface, image content analysis and management, mobile apps, and robotics.
         - Four face recognition functions are provided: face verification, finding similar faces, face grouping, and person identification.
-- **Bot Services** <sup><sub>PaaS</sup></sub>
+- **Bot Services** <sup>PaaS</sup>
   - Provides an integrated environment that is purpose-built for bot development, enabling you to build, connect, test, deploy, and manage intelligent bots, all from one place.
   - You can write a bot, connect, test, deploy, and manage it from your web browser with no separate editor or source control required.
     - For simple bots, you may not need to write code at all.
