removed strong emphasis from header

--- a/AZ-300 Microsoft Azure Architect Technologies/1. Developing and Configuring Infrastructure.md
+++ b/AZ-300 Microsoft Azure Architect Technologies/1. Developing and Configuring Infrastructure.md
@@ -288,7 +288,7 @@
   * Requires you to enable logging.
   * ❗ Not supported for premium storage accounts as they work differently and for Azure virtual machines
 
-### **Azure Content Delivery Network (CDN)**
+### Azure Content Delivery Network (CDN)
 
 * You can cache content to the user by using servers that are closest to the users.
   * Increases speed and availability
