Update 4.2. Storage - Azure Files.md
Fixed some grammatical errors on a couple of words

--- a/AZ-103 Microsoft Azure Administrator/4.2. Storage - Azure Files.md
+++ b/AZ-103 Microsoft Azure Administrator/4.2. Storage - Azure Files.md
@@ -19,7 +19,7 @@
       - Group file shares, software shares
       - Supported >Windows 7, > Windows Server 2008
     - **SMB 3** *(Supported by Azure)*
-      - Active-active support: Clustring with nodes
+      - Active-active support: Clustering with nodes
       - Transparent failover
       - RDMA support, multi channel > Lower latency
       - Enables usage of SQL and Hyper-V
@@ -55,7 +55,7 @@
 ### Azure File Sync
 
 - Enables replication from a single Azure Files share to one or more Windows based file servers
-  - Windows service are in a synchronozation group.
+  - Windows service are in a synchronization group.
 - Utilizes an agent deployed on each Windows Server instance that's then registered with the Storage Sync service then added to a sync group.
 - Cloud tiering
   - Least used data is moved to the cloud
@@ -97,7 +97,7 @@
   7. Install agent on file server
       - Supported >Windows Server 2012
       - Selected files can be skipped
-  8. Register server to the *storage sync service* as server endpint
+  8. Register server to the *storage sync service* as server endpoint
 - ❗ ***Scale and Limits***
   - **15** storage sync services per subscription
   - **30** sync groups per storage service
