Change table markdown formatting

--- a/AZ-400 Microsoft Azure DevOps Solutions/3.1. Azure Boards.md
+++ b/AZ-400 Microsoft Azure DevOps Solutions/3.1. Azure Boards.md
@@ -24,12 +24,12 @@
 
 ## 📝 Choose a process
 
-| Name | When to choose | Hierarchy | Separate items |
-| -- | -- | -- | -- | -- | -- |
-| **Basic Process** | Need for the simplest model | `Epic` (in *Portfolio backlog*) 🠚 `issue` (in *Product backlog*) 🠚 `task` | ␀ |
-| **Agile Process** | Need for an agile process e.g. Scrum, can track user stories, bugs, development, test activities | `Epic` (in *Portfolio backlog*) 🠚 `feature` 〖🠚 `user story` (in *Backlog*) 🠚 `task` (in *Backlog*)〗 OR  〖`bug` (in *Backlog*) 🠚 `task` (in *Backlog*)〗 | `issue` |
-| **Scrum process** | Need to align with Scrum | Same as **agile** but `product backlog item` instead of `user story` | `impediment` for issue & bug tracking |
-| **CMMI Process** | Need to follow more formal project process | Same as **agile** but `feature` instead of `user story` | `change request`, `issue`, `review`, `risk` |
+| Name | When to choose | Hierarchy | Separate items | 
+| -- | -- | -- | -- |
+| Basic Process | Need for the simplest model | Epic (in Portfolio backlog) 🠚 issue (in Product backlog) 🠚 task | ␀ | 
+| Agile Process | Need for an agile process e.g. Scrum, can track user stories, bugs, development, test activities | Epic (in Portfolio backlog) 🠚 feature 〖🠚 user story (in Backlog) 🠚 task (in Backlog)〗 OR 〖bug (in Backlog) 🠚 task (in Backlog)〗 | issue | 
+| Scrum process | Need to align with Scrum | Same as agile but product backlog item instead of user story | impediment for issue & bug tracking | 
+| CMMI Process | Need to follow more formal project process | Same as agile but feature instead of user story | change request, issue, review, risk |
 
 - 🤗 Capability Maturity Model Integration (CMMI) is framework to move towards an more agile approach.
   - defines the following maturity levels for processes: Initial, Managed, Defined, Quantitatively Managed, and Optimizing.
